# project-skeleton

./: .gitignore  README.md  environment.yml  readme.md  setup.py  template-readme.md
cython/src/: rectangle.h
cython/test/: CMakeLists.txt  RectangleTestSuite.h
module_name/: __init__.py  my_template.py
rect/: __init__.py  rect.cpp  rect.pyx
src/: setup.py
src/cython/: CMakeLists.txt
src/cython/src/: CMakeLists.txt  eigen_ex.cpp  eigen_ex.h  rectangle.cpp
src/cython/test/: CMakeLists.txt  eigen_ex_test.h
src/eigen_example/: __init__.py  eigen_example.cpp  eigen_example.pyx  py_example.py
src/rect/: __init__.py  pyrect.py  rect.cpp  rect.pyx
src/test/: rect_test.py
test/: rect_test.py
tests/: basic_test_example.py  second_test_example.py
